--- a/football2/index.html
+++ b/football2/index.html
@@ -86,7 +86,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <div class="content one_half"> 
       <!-- ################################################################################################ -->
       <h1>О нас</h1>
-      <img class="imgr borderedbox inspace-5" src="../images/demo/imgr.gif" alt="">
+      <img class="imgr borderedbox inspace-5" src="images/demo/imgr.gif" alt="">
       <p>Описание. Описание. Описание. Описание.</p>
       <p>Описание. Описание. Описание. Описание.</p>
       <div id="comments">
@@ -95,7 +95,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <li>
             <article>
               <header>
-                <figure class="avatar"><img src="../images/demo/avatar.png" alt=""></figure>
+                <figure class="avatar"><img src="images/demo/imgr.gif" alt=""></figure>
                 <address>
                 <a href="#">Новость 1</a>
                 </address>
@@ -112,7 +112,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <li>
             <article>
               <header>
-                <figure class="avatar"><img src="../images/demo/avatar.png" alt=""></figure>
+                <figure class="avatar"><img src="images/demo/imgr.gif" alt=""></figure>
                 <address>
                 <a href="#">Новость 2</a>
                 </address>
@@ -129,7 +129,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <li>
             <article>
               <header>
-                <figure class="avatar"><img src="../images/demo/avatar.png" alt=""></figure>
+                <figure class="avatar"><img src="images/demo/imgr.gif" alt=""></figure>
                 <address>
                 <a href="#">Новость 3</a>
                 </address>
