--- a/wavefire/index.html
+++ b/wavefire/index.html
@@ -15,7 +15,7 @@ Wir nehmen einen Koffer von zu Hause und bringen ihn für Ihren Flug zum Flughaf
   <header id="header" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div id="logo" class="one_quarter first">
-      <h1><a href="/"><span>Avia</span>LS</a></h1>
+      <h1><a href="/"><img src="images/demo/avialuggageservice_logo.png" width="100%" alt="AviaLS"></a></h1>
     </div>
     <div class="three_quarter">
       <ul class="nospace clear">
@@ -31,7 +31,7 @@ Wir nehmen einen Koffer von zu Hause und bringen ihn für Ihren Flug zum Flughaf
       </ul>
     </div>
     <!-- ################################################################################################ -->
-  </header>
+    </header>
 </div>
 <!-- ################################################################################################ -->
 <div class="wrapper row1">
@@ -55,7 +55,7 @@ Wir nehmen einen Koffer von zu Hause und bringen ihn für Ihren Flug zum Flughaf
         <form class="clear" id="ajaxSearch_form" action="search.html" method="post">
           <fieldset>
             <legend>Поиск:</legend>
-			<input id="ajaxSearch_input" type="search" name="search" placeholder="Suchtext eingeben..." onfocus="this.value=(this.value=='Suchtext eingeben...')? '' : this.value ;" />
+			<input id="ajaxSearch_input" type="search" name="search" placeholder="Suchtext eingeben..." onFocus="this.value=(this.value=='Suchtext eingeben...')? '' : this.value ;" />
             <button type="submit" name="sub" title="Suche!"><i class="fas fa-search"></i></button>
           </fieldset>
         </form>
